--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -8,10 +8,8 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 			div.main
 				include includes/baner
 			include includes/homeleading
-			div.work
-			
-			div.footer
-				
+			include includes/work
+			include includes/footer	
 		script
 			include ../../bower_components/yepnope/yepnope.1.5.0-min.js
 		script
