--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -4,6 +4,7 @@
 @import "fonts/cuprum.less";
 @import "fonts/cuprumbold.less";
 @import "fonts/cuprumitalic.less";
+@import "fonts/socps.less";
 .cuprum(){
 	font-family: 'Cuprum-Regular', 'cuprum';
 }
