--- a/src/less/import/site.less
+++ b/src/less/import/site.less
@@ -1,6 +1,11 @@
 @import "reset.less";
 @import "btn.less";
+@import "background.less";
+@import "shicon.less";
 @import "header.less";
 @import "baner.less";
 @import "homeleading.less";
+@import "homeleading_menu.less";
+@import "work.less";
+@import "footer.less";
 @import "carousel.less";
