--- a/assets/templates/projectsoft/css/preloader.css
+++ b/assets/templates/projectsoft/css/preloader.css
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru" prefix="og: http://ogp.me/ns#">
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="cmsmagazine" content="d8e7426ec72ad3e4ea38b09ebf01284c">
-    <meta name="yandex-verification" content="6411e39cb56db7ea">
-    <meta name="google-site-verification" content="9VvA1Mectc9y5kU4i3X_VBb9DAqHWONgHLIMUApO8cE">
-    <title>МИР «AVON» РОССИЯ</title>
-    <style>@font-face {
+@font-face {
   font-family: 'Helvetika';
   src: url('../fonts/Helvetika.eot');
   src: url('../fonts/Helvetika.woff2') format('woff2'), url('../fonts/Helvetika.woff') format('woff'), url('../fonts/Helvetika.ttf') format('truetype'), url('../fonts/Helvetika.svg#Helvetika') format('svg'), url('../fonts/Helvetika.eot?#iefix') format('embedded-opentype');
@@ -286,218 +275,3 @@
 .preloadpage .page {
   display: none;
 }
-
-    </style>
-    <!--link(rel="stylesheet" href="assets/templates/projectsoft/css/main.css" type="text/css")
-    -->
-  </head>
-  <body class="preloadpage">
-    <div class="page container-fluid">
-      <!-- header site-->
-      <div class="header row">
-        <div class="container">
-          <div class="row flex">
-            <div class="col-md-4 col-sm-6 header_logotip"><a href="/"><img src="assets/templates/projectsoft/images/avon_logotip.svg" alt="МИР «AVON» РОССИЯ" class="img-responsive center-block"></a></div>
-            <div class="col-md-4 col-sm-6 header_block text-center">
-              <div class="header_description">
-                <p class="header_title">&nbsp;</p>
-                <p class="header_description_wrapper"><strong>Обращаем внимание, что в Электронном каталоге на сайте могут быть представлены не все действующие специальные предложения.</strong></p>
-              </div><a href="javascript:;" class="btn btn-avon-transparent text-uppercase text-center">Каталог</a>
-            </div>
-            <div class="col-md-4 col-xs-12 header_block text-center">
-              <div class="header_description">
-                <p class="header_title"><strong class="header_title_wrapper text-uppercase">Стать координатором</strong></p>
-                <p class="header_description_wrapper"><strong>Работа из дома, гибкий график, стабильность и рост дохода.<br>Хотите присоединиться к Avon?</strong></p>
-              </div><a href="javascript:;" class="btn btn-avon-transparent text-uppercase text-center">ХОЧУ</a>
-            </div>
-          </div>
-        </div>
-        <div class="container-fluid">
-          <div class="row">
-            <nav role="navigation" class="navbar navbar-avon">
-              <div class="container-fluid">
-                <div class="navbar-header">
-                  <button type="button" data-toggle="collapse" data-target="#navbar" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                  <!-- Main menu Snippet Wayfinder-->
-                  <!-- &outerTpl=`mainMenuOuterTpl` &rowTpl=`mainMenuRowTpl`-->
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="javascript:;">AVON</a></li>
-                    <li><a href="javascript:;">РАБОТА В AVON</a></li>
-                    <li><a href="javascript:;">ПРЕДСТАВИТЕЛЯМ</a></li>
-                    <li><a href="javascript:;">КОНТАКТЫ</a></li>
-                  </ul>
-                  <!-- End menu Snippet Wayfinder-->
-                </div>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-      <!-- end header site-->
-      <div class="main">
-        <div class="baner row">
-          <div id="slider">
-            <div style="background-image: url('assets/templates/projectsoft/images/baner_0001.jpg');" class="item">
-              <div class="container">
-                <div class="item_wrapper">
-                  <div class="item_wrapper_top">
-                    <p class="text-uppercase"><span class="gold">AVON - ЭТО КОМПАНИЯ,</span><br>КОТОРАЯ НЕ ТОЛЬКО ПРИНОСИТ КРАСОТУ В ДОМА ЛЮДЕЙ,<br>НО И ОТКРЫВАЕТ ПЕРЕД НИМИ НОВЫЕ ГОРИЗОНТЫ.</p>
-                  </div>
-                  <div class="item_wrapper_center">
-                    <p class="text-uppercase love center-block"></p>
-                  </div>
-                  <div class="item_wrapper_bottom">
-                    <p class="text-uppercase"><span class="gold">AVON - ЭТО ВОЗМОЖНОСТЬ,</span><br>НАЧАТЬ СВОЕ ДЕЛО В ДРУЖНОЙ КОМАНДЕ!</p>
-                  </div>
-                  <div class="item_wrapper_btn"><a href="javascript:;" class="btn btn-avon-transparent-gold">ОЗНАКОМИТЬСЯ</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="leads">
-        <div class="row">
-          <div style="background-image: url('assets/templates/projectsoft/images/jarallax.jpg');" class="jarallax homeleading">
-            <div class="container">
-              <div class="row">
-                <div class="leads_table">
-                  <div class="leads_table_cell left">
-                    <div class="leads_title"><img src="assets/templates/projectsoft/images/actions.svg" alt="ПОРАДУЙ СЕБЯ! ПРИЗ НА ВЫБОР!" class="img-responsive center-block"></div>
-                    <div class="outer-carousel clearfix">
-                      <div id="carousel-actions" data-ride="carousel" class="carousel slide">
-                        <div class="carousel-inner">
-                          <div class="item active"><img src="assets/templates/projectsoft/images/priz_001.jpg" alt="Product №1" class="img-responsive center-block"></div>
-                          <div class="item last"><img src="assets/templates/projectsoft/images/priz_002.jpg" alt="Product №2" class="img-responsive center-block"></div>
-                        </div><a href="#carousel-actions" data-slide="prev" class="left carousel-control"><span class="icon-prev"></span></a><a href="#carousel-actions" data-slide="next" class="right carousel-control"><span class="icon-next"></span></a>
-                      </div>
-                      <div class="actions-description">
-                        <div class="inline-block gold-percent"><span class="circle">30%</span></div>
-                        <div class="inline-block percent"><span class="upper">СКИДКА</span><br>НА ПЕРВЫЙ ЗАКАЗ</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="leads_table_cell right">
-                    <div class="leads_title"><img src="assets/templates/projectsoft/images/agent_title.svg" alt="СТАНЬ ПРЕДСТАВИТЕЛЕМ AVON!" class="img-responsive center-block"></div>
-                    <div class="agent">
-                      <ul class="agent-step">
-                        <li>
-                          <p class="agent-step-title text-uppercase">ПРОЙДИТЕ РЕГИСТРАЦИЮ</p>
-                          <p>И станьте представителем Avon в период с 17 октября 2016 года по 6 ноября 2016 года (в компании 15/2016).</p>
-                        </li>
-                        <li>
-                          <p class="agent-step-title text-uppercase">РАЗМЕСТИТЕ</p>
-                          <p>свой первый заказ в этот же период на сумму 1600 руб. и более (по ценам каталога 15/2016) и оплати его.</p>
-                        </li>
-                        <li>
-                          <p class="agent-step-title text-uppercase">ВЫБЕРИ И ЗАКАЖИ</p>
-                          <p>приз всего за 5 руб. со своим первым заказом по каталогу компании 16/2016 или 17/2016.</p>
-                        </li>
-                      </ul>
-                      <div class="agent-button text-center"><a href="javascript:;" class="text-center text-uppercase btn btn-avon-transparent-white">ЗАРЕГИСТРИРОВАТЬСЯ</a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="container">
-              <div class="row">
-                <ul class="homeleading_menu">
-                  <li class="item col-lg-2 col-md-2 col-sm-4 col-xs-6 bg_01"><span class="row bg"><a href="javascript:;"><span class="text-uppercase text-center table-block"><span class="table-block-cell"><span>АКЦИИ И СКИДКИ</span></span></span></a></span></li>
-                  <li class="item col-lg-2 col-md-2 col-sm-4 col-xs-6 bg_02"><span class="row bg"><a href="javascript:;"><span class="text-uppercase text-center table-block"><span class="table-block-cell"><span>ШКАЛА СКИДОК</span></span></span></a></span></li>
-                  <li class="item col-lg-2 col-md-2 col-sm-4 col-xs-6 bg_03"><span class="row bg"><a href="javascript:;"><span class="text-uppercase text-center table-block"><span class="table-block-cell"><span>ПУНКТЫ ВЫДАЧИ</span></span></span></a></span></li>
-                  <li class="item col-lg-2 col-md-2 col-sm-4 col-xs-6 bg_04"><span class="row bg"><a href="javascript:;"><span class="text-uppercase text-center table-block"><span class="table-block-cell"><span>СРОЧНАЯ ДОСТАВКА</span></span></span></a></span></li>
-                  <li class="item col-lg-2 col-md-2 col-sm-4 col-xs-6 bg_05"><span class="row bg"><a href="javascript:;"><span class="text-uppercase text-center table-block"><span class="table-block-cell"><span>ДОГОВОР КОМПАНИИ</span></span></span></a></span></li>
-                  <li class="item col-lg-2 col-md-2 col-sm-4 col-xs-6 bg_06"><span class="row bg"><a href="javascript:;"><span class="text-uppercase text-center table-block"><span class="table-block-cell"><span class="hypher">ПРЕДСТАВИТЕЛЯМ</span></span></span></a></span></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="work row background_work">
-        <div class="container-fluid background_work_color">
-          <div class="row">
-            <div class="container">
-              <h2 class="text-center text-uppercase">СТАНЬ ПРЕДСТАВИТЕЛЕМ AVON</h2>
-              <div class="work_description">
-                <p>Заполни анкету и в самое ближайшее время с тобой свяжется Координатор или Менеджер по продажам и поможет оформить документы на регистрацию в Компании в качестве Представителя.</p>
-              </div>
-              <div class="buttonblock text-center"><a href="javascript:;" class="btn btn-avon-transparent text-uppercase">Заполнить анкету</a></div>
-              <div class="text-center shicon hidden-print">
-                <ul class="clearfix shicon-wrapper">
-                  <li><a href="javascript:;" data-icon="ico01" data-toggle="tooltip" title="ПОДЕЛИТЬСЯ: ФЕЙСБУК" class="sc sc-ico01"></a></li>
-                  <li><a href="javascript:;" data-icon="ico02" data-toggle="tooltip" title="ПОДЕЛИТЬСЯ: ОДНОКЛАССНИКИ" class="sc sc-ico02"></a></li>
-                  <li><a href="javascript:;" data-icon="ico03" data-toggle="tooltip" title="ПОДЕЛИТЬСЯ: ВКОНТАКТЕ" class="sc sc-ico03"></a></li>
-                  <li><a href="javascript:;" data-icon="ico04" data-toggle="tooltip" title="ПОДЕЛИТЬСЯ: ТВИТТЕР" class="sc sc-ico04"></a></li>
-                  <li><a href="javascript:;" data-icon="ico04" data-toggle="tooltip" title="ПОДЕЛИТЬСЯ: GOOGLE+" class="sc sc-ico05"></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer row">
-        <div class="container">
-          <div class="row">
-            <div class="footer-wrapper table-block">
-              <div class="table-block-cell left">
-                <h4>О сайте</h4>
-                <div class="description">
-                  <p>Сайт ведущего координатора компании «AVON»<br>Людмилы Атамановой</p>
-                  <p>Телефон для связи: +7 927 296-96-08</p>
-                </div>
-              </div>
-              <div class="table-block-cell right">
-                <div class="developer">
-                  <p><a href="http://studionions.com" target="_blank">Разработка и поддержка сайта<br>WEB Студия STUDIONIONS</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-fluid bottom">
-          <p class="copyright">Avon World Russia © 2016<br>г. Самара</p>
-        </div>
-      </div>
-    </div>
-    <script>/*yepnope1.5.0|WTFPL*/
-(function(a,b,c){function C(a){return!a||a=="loaded"||a=="complete"||a=="uninitialized"}function D(a,c,d,g,h,j){var l=b.createElement("script"),m;g=g||B.errorTimeout,l.src=a;for(i in d)l.setAttribute(i,d[i]);c=j?F:c||k,l.onreadystatechange=l.onload=function(){!m&&C(l.readyState)&&(m=1,c(),l.onload=l.onreadystatechange=null)},e(function(){m||(m=1,c(1))},g),h?l.onload():f.parentNode.insertBefore(l,f)}function E(a,c,d,g,h,i){var j=b.createElement("link"),l,m;g=g||B.errorTimeout,c=i?F:c||k,j.href=a,j.rel="stylesheet",j.type="text/css";for(m in d)j.setAttribute(m,d[m]);h||(f.parentNode.insertBefore(j,f),e(c,0))}function F(){var a=h.shift();j=1,a?a.t?e(function(){(a.t=="c"?B.injectCss:B.injectJs)(a.s,0,a.a,a.x,a.e,1)},0):(a(),F()):j=0}function G(a,c,d,g,i,k,l){function s(b){if(!p&&C(o.readyState)){r.r=p=1,!j&&F(),o.onload=o.onreadystatechange=null;if(b){a=="object"&&e(function(){n.removeChild(o)},50);for(var d in y[c])y[c].hasOwnProperty(d)&&y[c][d].onload()}}}l=l||B.errorTimeout;var o={},p=0,q=0,r={t:d,s:c,e:i,a:k,x:l};y[c]===1&&(q=1,y[c]=[],o=b.createElement(a)),o.src=o.data=c,o.width=o.height="0",o.onerror=o.onload=o.onreadystatechange=function(){s.call(this,q)},h.splice(g,0,r),a=="object"&&(q||y[c]===2?(n.insertBefore(o,m?null:f),e(s,l)):y[c].push(o))}function H(a,b,c,d,e){return j=0,b=b||"j",v(a)?G(b=="c"?s:r,a,b,this.i++,c,d,e):(h.splice(this.i++,0,a),h.length==1&&F()),this}function I(){var a=B;return a.loader={load:H,i:0},a}var d=b.documentElement,e=a.setTimeout,f=b.getElementsByTagName("script")[0],g={}.toString,h=[],j=0,k=function(){},l="MozAppearance"in d.style,m=l&&!!b.createRange().compareNode,n=m?d:f.parentNode,o=a.opera&&g.call(a.opera)=="[object Opera]",p=!!b.attachEvent,q="webkitAppearance"in d.style,r=l?"object":"img",s=p?"script":r,t=Array.isArray||function(a){return g.call(a)=="[object Array]"},u=function(a){return Object(a)===a},v=function(a){return typeof a=="string"},w=function(a){return g.call(a)=="[object Function]"},x=[],y={},z={timeout:function(a,b){return b.length&&(a.timeout=b[0]),a}},A,B;B=function(a){function f(a){var b=a.split("!"),c=x.length,d=b.pop(),e=b.length,f={url:d,origUrl:d,prefixes:b},g,h,i;for(h=0;h<e;h++)i=b[h].split("="),g=z[i.shift()],g&&(f=g(f,i));for(h=0;h<c;h++)f=x[h](f);return f}function g(a){return a.split(".").pop().split("?").shift()}function h(a,b,d,e,h){var i=f(a),j=i.autoCallback,k=g(i.url);if(i.bypass)return;b&&(b=w(b)?b:b[a]||b[e]||b[a.split("/").pop().split("?")[0]]||F);if(i.instead)return i.instead(a,b,d,e,h);y[i.url]?i.noexec=!0:y[i.url]=1,d.load(i.url,i.forceCSS||!i.forceJS&&"css"==g(i.url)?"c":c,i.noexec,i.attrs,i.timeout),(w(b)||w(j))&&d.load(function(){I(),b&&b(i.origUrl,h,e),j&&j(i.origUrl,h,e),y[i.url]=2})}function i(a,b){function m(a,d){if(!a)!d&&i();else if(v(a))d||(f=function(){var a=[].slice.call(arguments);g.apply(this,a),i()}),h(a,f,b,0,c);else if(u(a)){j=function(){var b=0,c;for(c in a)a.hasOwnProperty(c)&&b++;return b}();for(l in a)a.hasOwnProperty(l)&&(!d&&!--j&&(w(f)?f=function(){var a=[].slice.call(arguments);g.apply(this,a),i()}:f[l]=function(a){return function(){var b=[].slice.call(arguments);a.apply(this,b),i()}}(g[l])),h(a[l],f,b,l,c))}}var c=!!a.test,d=c?a.yep:a.nope,e=a.load||a.both,f=a.callback||k,g=f,i=a.complete||k,j,l;m(d,!!e),e&&m(e)}var b,d,e=this.yepnope.loader;if(v(a))h(a,0,e,0);else if(t(a))for(b=0;b<a.length;b++)d=a[b],v(d)?h(d,0,e,0):t(d)?B(d):u(d)&&i(d,e);else u(a)&&i(a,e)},B.addPrefix=function(a,b){z[a]=b},B.addFilter=function(a){x.push(a)},B.errorTimeout=1e4,b.readyState==null&&b.addEventListener&&(b.readyState="loading",b.addEventListener("DOMContentLoaded",A=function(){b.removeEventListener("DOMContentLoaded",A,0),b.readyState="complete"},0)),a.yepnope=I(),a.yepnope.executeStack=F,a.yepnope.injectJs=D,a.yepnope.injectCss=E})(this,this.document);
-
-    </script>
-    <script>var tmpd = "assets/templates/projectsoft",
-	stamp = "?v="+(new Date()).getTime();
-yepnope({
-	nope:{
-			style: tmpd + "/css/main.css"+stamp,
-			app:tmpd + "/js/app.js"+stamp,
-			hypher:tmpd + "/js/hypher.js"+stamp,
-			main:tmpd + "/js/main.js"+stamp
-		},
-	callback:{
-		style: function(){
-			//var body = document.getElementsByTagName("body");
-			//body[0].style.display = "initial";
-		},
-		app: function(){
-			$('body').removeClass("preloadpage");
-		},
-		main: function() {
-			yepnope({
-				test:"object" == typeof window.CatalogAvon,
-				yep:[
-					tmpd + "/css/book.css"+stamp,
-					tmpd + "/js/book.js"+stamp
-				]
-			});
-		},
-		hypher: function(){
-			$('.agent-step li p, .hypher').hyphenate('ru');
-		}
-	}
-});
-    </script>
-  </body>
-</html>
