--- a/src/html/includes/homeleading.jade
+++ b/src/html/includes/homeleading.jade
@@ -16,7 +16,7 @@ div.leads
 									li
 										p.agent-step-title.text-uppercase ПРОЙДИТЕ РЕГИСТРАЦИЮ
 										p
-											|И станьте представителем Avon в период с 17 октября 2016 года по 6 ноября 2016 года (в кампании 15/2016).
+											|И станьте представителем Avon в период с 17 октября 2016 года по 6 ноября 2016 года (в компании 15/2016).
 									li
 										p.agent-step-title.text-uppercase РАЗМЕСТИТЕ
 										p
@@ -24,28 +24,8 @@ div.leads
 									li
 										p.agent-step-title.text-uppercase ВЫБЕРИ И ЗАКАЖИ
 										p
-											|приз всего за 5 руб. со своим первым заказом по каталогу кампании 16/2016 или 17/2016.
+											|приз всего за 5 руб. со своим первым заказом по каталогу компании 16/2016 или 17/2016.
 								div.agent-button.text-center
 									a.text-center.text-uppercase.btn.btn-avon-transparent-white(href="javascript:;") ЗАРЕГИСТРИРОВАТЬСЯ
-			.container
-				.row
-					ul.homeleading_menu
-						li.item
-							a(href="javascript:;")
-								span.text-uppercase.text-center.center-block АКЦИИ И СКИДКИ
-						li.item
-							a(href="javascript:;")
-								span.text-uppercase.text-center.center-block ШКАЛА СКИДОК
-						li.item
-							a(href="javascript:;")
-								span.text-uppercase.text-center.center-block ПУНКТЫ ВЫДАЧИ
-						li.item
-							a(href="javascript:;")
-								span.text-uppercase.text-center.center-block СРОЧНАЯ ДОСТАВКА
-						li.item
-							a(href="javascript:;")
-								span.text-uppercase.text-center.center-block ДОГОВОР КОМПАНИИ
-						li.item
-							a(href="javascript:;")
-								span.text-uppercase.text-center.center-block ПРЕДСТАВИТЕЛЯМ
+			include homeleading_menu
 									
