--- a/src/less/import/site.less
+++ b/src/less/import/site.less
@@ -7,5 +7,10 @@
 @import "homeleading.less";
 @import "homeleading_menu.less";
 @import "work.less";
+@import "workavon.less";
+@import "work_full.less";
+@import "work_full_comments.less";
+@import "work_full_avonbg.less";
+@import "getby_avon.less";
 @import "footer.less";
 @import "carousel.less";
