--- a/src/less/fonts/helvetika.less
+++ b/src/less/fonts/helvetika.less
@@ -9,4 +9,42 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'AGAvantGardeCyr';
+	src: url('@{project_font}/AGAvantGardeCyr.eot');
+	src: url('@{project_font}/AGAvantGardeCyr.eot') format('embedded-opentype'),
+	url('@{project_font}/AGAvantGardeCyr.woff2') format('woff2'),
+	url('@{project_font}/AGAvantGardeCyr.woff') format('woff'),
+	url('@{project_font}/AGAvantGardeCyr.ttf') format('truetype'),
+	url('@{project_font}/AGAvantGardeCyr.svg#AGAvantGardeCyr') format('svg')
+}
 
+@font-face {
+	font-family: 'AGOptimaCyr';
+	src: url('@{project_font}/AGOptimaCyr.eot');
+	src: url('@{project_font}/AGOptimaCyr.eot') format('embedded-opentype'),
+	url('@{project_font}/AGOptimaCyr.woff2') format('woff2'),
+	url('@{project_font}/AGOptimaCyr.woff') format('woff'),
+	url('@{project_font}/AGOptimaCyr.ttf') format('truetype'),
+	url('@{project_font}/AGOptimaCyr.svg#AGOptimaCyr') format('svg')
+}
+
+@font-face {
+	font-family: 'AmbassadoreType';
+	src: url('@{project_font}/AmbassadoreType.eot');
+	src: url('@{project_font}/AmbassadoreType.eot') format('embedded-opentype'),
+	url('@{project_font}/AmbassadoreType.woff2') format('woff2'),
+	url('@{project_font}/AmbassadoreType.woff') format('woff'),
+	url('@{project_font}/AmbassadoreType.ttf') format('truetype'),
+	url('@{project_font}/AmbassadoreType.svg#AmbassadoreType') format('svg')
+}
+
+@font-face {
+	font-family: 'AGNewHandbook';
+	src: url('@{project_font}/AGNewHandbook.eot');
+	src: url('@{project_font}/AGNewHandbook.eot') format('embedded-opentype'),
+	url('@{project_font}/AGNewHandbook.woff2') format('woff2'),
+	url('@{project_font}/AGNewHandbook.woff') format('woff'),
+	url('@{project_font}/AGNewHandbook.ttf') format('truetype'),
+	url('@{project_font}/AGNewHandbook.svg#AGNewHandbook') format('svg')
+}
