--- a/src/less/import/ProductsWrapper.less
+++ b/src/less/import/ProductsWrapper.less
@@ -55,6 +55,9 @@
 		&_description {
 			margin-bottom: 10px;
 			.clearfix();
+			strong {
+				color: #ec008c;
+			}
 			img {
 				position: relative;
 				max-width: 100%;
