--- a/src/less/import/header.less
+++ b/src/less/import/header.less
@@ -98,6 +98,7 @@
 		li {
 			a {
 				min-width: 170px;
+				text-transform: uppercase;
 				&, &:focus {
 					.transition(all .5s);
 					color: @avon-btn-bg;
