--- a/src/less/import/homeleading_menu.less
+++ b/src/less/import/homeleading_menu.less
@@ -10,6 +10,8 @@
 			background-repeat: no-repeat;
 			background-size: 100% auto;
 			.transition(all .5s);
+			.helvetika();
+			font-size: 14px;
 			&:hover {
 				background-size: 105% auto;
 				.bg {
