--- a/src/less/import/reset.less
+++ b/src/less/import/reset.less
@@ -1,7 +1,7 @@
 body {
 	color: #DF75E2;
 	font-size: 16px;
-	.helvetika();
+	font-family: 'AGAvantGardeCyr';
 }
 h1, .h1,
 h2, .h2,
@@ -10,7 +10,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6
 {
-	.helvetika();
+	font-family: 'AGAvantGardeCyr';
 }
 h {
 	&1, &2, &3, &4, &5, &6 {
