--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,4 +1,4 @@
-@project_font: "../fonts";
+@project_font: "/assets/templates/projectsoft/fonts";
 @bgpath: "../images";
 @avon-btn-bg: #DF75E2;
 @avon-btn-color: #FFFFFF;
